# NtExt

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  NtCallExt.slnx  README.md  README_CN.md
Example/: Example.cpp  Example.vcxproj
NtCallExt/: NtApi.h  NtCallExt.cpp  NtCallExt.h  NtCallExt.vcxproj  NtCallExt.vcxproj.filters  dllmain.cpp
cmake_utils/: auto_refactor_headers.cmake
examples/: CMakeLists.txt  main.cpp
include/NtCallExt/include/: NtApi.h  NtCallExt.h  stdafx.h
src/: CMakeLists.txt  NtCallExt.cpp  NtCallExt.h  NtExt.hpp  Wow64NtCallExt.cpp  Wow64NtCallExt.h  X64NtCallExt.cpp  X64NtCallExt.h
src/internal/: NtApi.h  NtAsm.h  NtBase.hpp  NtResult.hpp  NtStatus.hpp  NtStructs.h
src/invoker/: InvokerBase.hpp  NtExtInvokers.hpp
src/invoker/wow64/: Wow64Anycall.hpp  Wow64Call.hpp  Wow64Invoker.hpp  Wow64Syscall.hpp
src/invoker/x64/: X64Anycall.hpp  X64Call.hpp  X64Invoker.hpp  X64Syscall.hpp
src/pch/: stdafx.h
src/resolver/: NtExtResolvers.hpp  ResolverBase.cpp  ResolverBase.hpp
src/resolver/wow64/: Wow64Resolver.cpp  Wow64Resolver.hpp
src/resolver/x64/: X64Resolver.cpp  X64Resolver.hpp
